Hide dropzone as part of asset workflow

--- a/spec/javascripts/fixtures/asset_workflow.html
+++ b/spec/javascripts/fixtures/asset_workflow.html
@@ -10,8 +10,13 @@
       <option value="http://definitions.artic.edu/ontology/1.0/type/Text">Text</option>
     </select>
 
-    <div class="row fileupload-buttonbar">
-      <button type="button">Add files</button>
+    <div id="fileupload">
+      <div class="row fileupload-buttonbar">
+        <button type="button">Add files</button>
+      </div>
+      <div class="dropzone">
+        Drop files here.
+      </div>
     </div>
   </li>
   <li role="presentation">
